--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -5,7 +5,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 30px;
 }
 
 .icons {
@@ -13,5 +12,52 @@
 }
 
 .row {
-    border: 1px solid black;
+    margin-top: 50px;
+}
+
+.carousel {
+    padding: 20px;
+}
+
+.select {
+    margin-right: 10px;
+}
+
+.discount {
+    text-decoration: line-through;
+
+}
+
+.dprice {
+    display: inline;
+    margin-right: 10px;
+}
+
+.nodiscount {
+    font-weight: bold;
+}
+
+.related {
+    margin: 0 auto;
+    display: flex;
+    gap: 80px;
+    padding: 20px;
+    overflow-x: scroll;
+    width: 80%;
+}
+
+.rowRelated {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+    ::-webkit-scrollbar {
+        display: none
+    }
+}
+
+.buttons {
+    font-size: 30px;
+    // border: 1px solid blue;
 }
