--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: "sticky";
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  background-color: white;
 }
 
 .layoutBody {
