--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -46,3 +46,24 @@
 .dprices {
   display: inline-block;
 }
+
+.carouselImg {
+  width: 100%;
+  color: #fff;
+  height: 550px;
+  text-align: center;
+  object-fit: cover;
+}
+
+.cardImg {
+  width: 100%;
+  height: 250px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+}
+
+.relatedCard {
+  width: 250px;
+}
