--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: "sticky";
+  position: sticky;
   top: 0;
   z-index: 10;
   width: 100%;
