--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
 }
 
