--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import "./antd-overrides";
 
 html {
   width: 100vw;
@@ -9,16 +10,4 @@ body {
   margin: 0;
   width: 100%;
   overflow-x: hidden;
-}
-
-.ant-btn-primary {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color-darken-10);
-  color: var(--primary-color-darken-20);
-
-  &:hover {
-    background-color: var(--primary-color-darken-10) !important;
-    border-color: var(--primary-color-darken-10) !important;
-    color: var(--primary-color-brighten-10) !important;
-  }
 }
