--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,8 +1,7 @@
-$xsmall: 0px;
+$xsmall: 0;
 $small: 600px;
 $medium: 960px;
 $large: 1200px;
-
 $xs-breakpoint: "xsmall";
 $sm-breakpoint: "small";
 $md-breakpoint: "medium";
