--- a/src/components/loading/loading.module.scss
+++ b/src/components/loading/loading.module.scss
@@ -13,7 +13,7 @@
   border: 5px solid #fff;
   border: solid 5px var(--secondary-color-brighten-30);
   border-radius: 50%;
-  box-shadow: inset 0 0 5px 4px rgb(black 0.1);
+  box-shadow: inset 0 0 5px 4px rgba(black 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
