--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,4 +1,5 @@
 @import "@/styles/mixins";
+@import "@/styles/breakpoints";
 
 .layoutHeader {
   align-items: center;
@@ -14,7 +15,21 @@
 
 .layoutBody {
   min-height: 85vh;
-  padding: 0 50px;
+
+  @include breakpoint($xs-breakpoint) {
+    padding: 0 20px;
+  }
+}
+
+.bodyContainer {
+  margin: 0 auto;
+  max-width: 1500px;
+  min-height: 380px;
+  padding: 24px;
+
+  @include breakpoint($xs-breakpoint) {
+    padding: 10px 0;
+  }
 }
 
 .branding {
