--- a/src/components/page-components/detail-screen/product-info/product-info.module.scss
+++ b/src/components/page-components/detail-screen/product-info/product-info.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/breakpoints";
+
 .nav {
   align-items: center;
   border-bottom: 1px solid #eceff1;
@@ -11,12 +13,12 @@
   margin: 10px;
 }
 
-.row {
-  margin-top: 50px;
-}
-
 .wrapper {
-  padding: 20px;
+  padding: 10px 0;
+
+  @include breakpoint($sm-breakpoint) {
+    padding: 20px;
+  }
 }
 
 .select {
@@ -36,11 +38,15 @@
   font-weight: bold;
 }
 
-.related {
-  align-items: center;
+.relatedCards {
   display: flex;
   gap: 30px;
-  justify-content: flex-start;
+  justify-content: center;
+  padding: 10px 0;
+
+  @include breakpoint($sm-breakpoint) {
+    justify-content: flex-start;
+  }
 }
 
 .dprices {
@@ -49,10 +55,26 @@
 
 .carouselImg {
   color: #fff;
-  height: 550px;
+  height: 350px;
   object-fit: cover;
   text-align: center;
   width: 100%;
+
+  @include breakpoint($sm-breakpoint) {
+    height: 400px;
+  }
+
+  @include breakpoint($md-breakpoint) {
+    height: 450px;
+  }
+
+  @include breakpoint($lg-breakpoint) {
+    height: 500px;
+  }
+
+  @include breakpoint($xl-breakpoint) {
+    height: 550px;
+  }
 }
 
 .cardImg {
